# ACRNN

./: .gitignore  README.md  pyproject.toml
.zed/: settings.json
acrnn/: cli.py  config.py  model.py  trainer.py
acrnn/data/: __init__.py  deap_loader.py  deap_preprocesser.py  dreamer.py  dreamer_loader.py  dreamer_preprocesser.py  loaders.py  preprocess_utils.py  source.py  split.py
acrnn/utils/: __init__.py  timestamps.py
scripts/: fast_run.sh  run.sh  tmux_launch.sh  tmux_targets.sh  train.py  train.sh  visualize_mne.py
scripts/subject_dependent/: deap_run.sh  dreamer_run.sh  run.sh
scripts/subject_dependent/deap/: fast_run.sh  run.sh
scripts/subject_dependent/dreamer/: fast_run.sh  run.sh
scripts/subject_independent/: deap_run.sh  dreamer_run.sh
scripts/subject_independent/deap/: fast_run.sh  run.sh
scripts/subject_independent/dreamer/: run.sh
src/: main.py  train_arousal.py  train_valence.py
src/acrnn/: __init__.py  cli.py  model.py  train.py  training.py
src/data/: __init__.py  dreamer.py
src/utils/: __init__.py  device.py
